--- a/.github/workflows/publish-pages.yaml
+++ b/.github/workflows/publish-pages.yaml
@@ -1,5 +1,5 @@
 # TOPST SCHOOL's GitHub Pages Publishing Workflow
-# ==============================================
+# ===============================================
 #
 # Author: Akshay Mestry <xa@mes3.dev>
 # Created on: Friday, August 30 2024
@@ -69,6 +69,6 @@ jobs:
           publish_dir: ${{ env.OUTPUT_DIR }}
           force_orphan: false
           enable_jekyll: false
-          user_email: "github-actions[topst-bot]@users.noreply.github.com"
-          user_name: "github-actions[topst-bot]"
+          user_email: "github-actions[bot]@users.noreply.github.com"
+          user_name: "github-actions[bot]"
           full_commit_message: ${{ github.event.head_commit.message }}
