--- a/.github/workflows/publish-dev-pages.yaml
+++ b/.github/workflows/publish-dev-pages.yaml
@@ -76,7 +76,7 @@ jobs:
       # Step 5: Deploy the built HTML files to the specified branch (GitHub Pages).
       - name: DEV | Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/dev' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}  # Deploys to the gh-pages branch.
           publish_branch: ${{ env.PUBLISH_BRANCH }}  # Uses the GitHub token for authentication.
