--- a/.github/workflows/publish-feature-pages.yaml
+++ b/.github/workflows/publish-feature-pages.yaml
@@ -74,7 +74,7 @@ jobs:
         # -q: Run in quiet mode, with minimal output.
         run: |
           echo "Building Sphinx documentation..."
-          sphinx-build -Eaq --builder html --define language=en ${{ env.SOURCE_DIR }} ${{ env.OUTPUT_DIR }}/en && sphinx-build -Eaq --builder html --define language=es ${{ env.SOURCE_DIR }} ${{ env.OUTPUT_DIR }}/es
+          sphinx-build -Eaq --builder html --define language=en ${{ env.SOURCE_DIR }} ${{ env.OUTPUT_DIR }} && sphinx-build -Eaq --builder html --define language=es ${{ env.SOURCE_DIR }} ${{ env.OUTPUT_DIR }}/es
 
       # Step 5: Deploy the built HTML files to the specified branch (GitHub Pages).
       - name: FEAT | Deploy to GitHub Pages
