--- a/.github/workflows/publish-dev-pages.yaml
+++ b/.github/workflows/publish-dev-pages.yaml
@@ -70,12 +70,8 @@ jobs:
         # -a: Write all output files (default only writes new and changed files).
         # -q: Run in quiet mode, with minimal output.
         run: |
-          echo "Building Sphinx documentation..."
-<<<<<<< HEAD
+          echo "Building TOPST SCHOOL bilingual documentation..."
           sphinx-build -Eaq --builder html --define language=en ${{ env.SOURCE_DIR }} ${{ env.OUTPUT_DIR }} && sphinx-build -Eaq --builder html --define language=es ${{ env.SOURCE_DIR }} ${{ env.OUTPUT_DIR }}/es
-=======
-          sphinx-build -Eaq --builder html --define language=en ${{ env.SOURCE_DIR }} ${{ env.OUTPUT_DIR }}/en && sphinx-build -Eaq --builder html --define language=es ${{ env.SOURCE_DIR }} ${{ env.OUTPUT_DIR }}/es
->>>>>>> afff13ce66fc335603ebcd8d36bc366ee3fb4548
 
       # Step 5: Deploy the built HTML files to the specified branch (GitHub Pages).
       - name: DEV | Deploy to GitHub Pages
