--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,19 @@
-coeus-sphinx-theme
+bqplot
+git+https://github.com/xames3/coeus-sphinx-theme.git#egg=coeus-sphinx-theme
+ipycanvas>=0.9.1
+ipyevents>=2.0.1
+ipyleaflet
+ipympl>=0.8.2
+ipywidgets>=8.1.3,<9
+jupyterlab-geojson>=3.4.0,<4
+jupyterlab-night
+jupyterlab_miami_nights
+jupyterlab~=4.2.5
+jupyterlite-core==0.4.1
+jupyterlite-javascript-kernel==0.3.0
+jupyterlite-pyodide-kernel==0.4.2
+jupyterlite-sphinx
+notebook~=7.2.2
+plotly>=5,<6
 sphinx-copybutton
 sphinx-intl
